# HiveGreatSage-PCControl

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: default.yaml  device_adb_links.json  last_login.json
core/: __init__.py  app.py
core/api_client/: auth_api.py  base_client.py  client_config_api.py  device_api.py  params_api.py  update_api.py
core/auth/: auth_manager.py  models.py
core/debug/: mock_devices.py
core/device/: adb_link_manager.py  device_manager.py  models.py
core/network/: __init__.py  network_config_manager.py
core/sync/: sync_manager.py  sync_worker.py
core/team/: lan_comm.py  team_manager.py
core/updater/: update_checker.py  update_downloader.py  update_installer.py
core/utils/: adb_manager.py  cache.py  config.py  constants.py  crypto.py  logger.py
docs/pc_control/: P4_ACCOUNT_PASSWORD_RULES.md  UI_BOUNDARY.md  UI_BOUNDARY_DECISION_LOG.md  UI_BOUNDARY_EXECUTION_LOG.md
game/: dashboard_widget.py  game_config.py  params_widget.py
scripts/: build.py  check_release_manifest.py  dev_setup.py  install_watchdog_task.ps1  pccontrol_watchdog.py  uninstall_watchdog_task.ps1
tests/: test_api_client.py  test_auth.py  test_device.py
tools/adb/: README.md
tools/cv/: README.md
ui/: login_window.py  main_window.py
ui/dialogs/: __init__.py  batch_settings_dialog.py  device_settings_dialog.py  global_settings_dialog.py
ui/pages/: __init__.py  device_page.py
ui/styles/: colors.py  dark_theme.qss
ui/widgets/: batch_dialog.py  device_bottom_toolbar.py  device_edit_dialog.py  device_side_panel.py  (+8 more)
(+3 files in other folders)
